Features lassen sich aus der IDE ausführen und werden nicht mehr von maven ignoriert. (Denke an den Bug von Cucumber, wenn keine Features ausgeführt werden können.)

--- a/domaene/pom.xml
+++ b/domaene/pom.xml
@@ -205,6 +205,9 @@
                         <testResource>
                             <directory>src/test/resources-h2</directory>
                         </testResource>
+                        <testResource>
+                            <directory>src/test/resources</directory>
+                        </testResource>
                     </testResources>
                 </build>
                 <dependencies>
