--- a/.gitignore
+++ b/.gitignore
@@ -75,9 +75,9 @@ buildNumber.properties
 # if you remove the above rule, at least ignore the following:
 
 # User-specific stuff:
-# .idea/workspace.xml
-# .idea/tasks.xml
-# .idea/dictionaries
+.idea/workspace.xml
+.idea/tasks.xml
+.idea/dictionaries
 
 # Sensitive or high-churn files:
 # .idea/dataSources.ids
@@ -117,3 +117,5 @@ crashlytics-build.properties
 node_modules
 quickstart/
 *~
+src/main/webapp/js
+
