--- a/domaene/pom.xml
+++ b/domaene/pom.xml
@@ -119,6 +119,7 @@
         <dependency>
             <groupId>org.apache.deltaspike.modules</groupId>
             <artifactId>deltaspike-jpa-module-impl</artifactId>
+            <scope>test</scope>
         </dependency>
 
         <dependency>
@@ -130,6 +131,7 @@
         <dependency>
             <groupId>org.apache.deltaspike.modules</groupId>
             <artifactId>deltaspike-test-control-module-impl</artifactId>
+            <scope>test</scope>
         </dependency>
 
         <dependency>
@@ -162,6 +164,7 @@
         <dependency>
             <groupId>org.apache.deltaspike.cdictrl</groupId>
             <artifactId>deltaspike-cdictrl-weld</artifactId>
+            <scope>test</scope>
         </dependency>
 
         <dependency>
