--- a/dominium-persistenz-jpa/pom.xml
+++ b/dominium-persistenz-jpa/pom.xml
@@ -75,6 +75,7 @@
         <dependency>
             <groupId>org.apache.deltaspike.modules</groupId>
             <artifactId>deltaspike-jpa-module-impl</artifactId>
+            <scope>test</scope>
         </dependency>
 
         <dependency>
@@ -86,6 +87,7 @@
         <dependency>
             <groupId>org.apache.deltaspike.modules</groupId>
             <artifactId>deltaspike-test-control-module-impl</artifactId>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>javax.enterprise</groupId>
