--- a/infrastruktur/pom.xml
+++ b/infrastruktur/pom.xml
@@ -112,6 +112,7 @@
         <dependency>
             <groupId>org.apache.deltaspike.modules</groupId>
             <artifactId>deltaspike-jpa-module-impl</artifactId>
+            <scope>test</scope>
         </dependency>
 
         <dependency>
@@ -123,6 +124,7 @@
         <dependency>
             <groupId>org.apache.deltaspike.modules</groupId>
             <artifactId>deltaspike-test-control-module-impl</artifactId>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>javax.enterprise</groupId>
