--- a/anwendung/pom.xml
+++ b/anwendung/pom.xml
@@ -43,6 +43,13 @@
             <version>1.4.190</version>
         </dependency>
 
+        <dependency>
+            <groupId>net.bootsfaces</groupId>
+            <artifactId>bootsfaces</artifactId>
+            <version>0.8.1</version>
+            <scope>compile</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
