--- a/anwendung/pom.xml
+++ b/anwendung/pom.xml
@@ -44,22 +44,9 @@
         </dependency>
 
         <dependency>
-            <groupId>org.primefaces</groupId>
-            <artifactId>primefaces</artifactId>
-            <version>5.3</version>
-            <scope>compile</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>org.primefaces.extensions</groupId>
-            <artifactId>all-themes</artifactId>
-            <version>1.0.8</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.primefaces.extensions</groupId>
-            <artifactId>primefaces-extensions</artifactId>
-            <version>4.0.0</version>
+            <groupId>de.larmic.butterfaces</groupId>
+            <artifactId>components-mojarra</artifactId>
+            <version>1.10.6</version>
         </dependency>
     </dependencies>
 
