--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
         <checkstyle.version>6.14.1</checkstyle.version>
 
         <!-- Version für die Codierungunterastützung mit Richtlinien und Aspekten -->
-        <version.de.therapeutenkiller.coding>0.0.24</version.de.therapeutenkiller.coding>
+        <version.de.therapeutenkiller.coding>0.0.26-SNAPSHOT</version.de.therapeutenkiller.coding>
 
 
         <version.deltaspike>1.5.2</version.deltaspike>
@@ -578,6 +578,7 @@
         <module>dominium</module>
         <module>dominium-persistenz-jpa</module>
         <module>anwendung</module>
+        <module>coding</module>
     </modules>
 </project>
 
