--- a/pom.xml
+++ b/pom.xml
@@ -109,6 +109,7 @@
                 <groupId>javax</groupId>
                 <artifactId>javaee-api</artifactId>
                 <version>7.0</version>
+                <scope>provided</scope>
             </dependency>
 
 
