--- a/dominium-persistenz-jpa/pom.xml
+++ b/dominium-persistenz-jpa/pom.xml
@@ -56,17 +56,10 @@
             <artifactId>cdi-api</artifactId>
             <scope>provided</scope>
         </dependency>
-        <!-- Import the Common Annotations API (JSR-250), we use provided scope
-        as the API is included in WildFly -->
+
         <dependency>
             <groupId>org.jboss.spec.javax.annotation</groupId>
             <artifactId>jboss-annotations-api_1.2_spec</artifactId>
-            <scope>provided</scope>
-        </dependency>
-        <!-- Import the Servlet API, we use provided scope as the API is included in WildFly -->
-        <dependency>
-            <groupId>org.jboss.spec.javax.servlet</groupId>
-            <artifactId>jboss-servlet-api_3.1_spec</artifactId>
             <scope>provided</scope>
         </dependency>
 
@@ -75,6 +68,9 @@
             <artifactId>hibernate-jpa-2.1-api</artifactId>
             <scope>provided</scope>
         </dependency>
+        <!-- Import the Common Annotations API (JSR-250), we use provided scope
+        as the API is included in WildFly -->
+        <!-- Import the Servlet API, we use provided scope as the API is included in WildFly -->
 
         <!-- Erforderlich für Deltaspike Tests -->
         <dependency>
@@ -142,9 +138,7 @@
                 <dependency>
                     <groupId>org.hibernate</groupId>
                     <artifactId>hibernate-entitymanager</artifactId>
-                    <version>4.3.11.Final</version>
-                    <scope>test</scope>
-                    <!-- <version>5.0.7.Final</version> -->
+                    <version>${hibernate.version}</version>
                 </dependency>
 
                 <dependency>
