--- a/pom.xml
+++ b/pom.xml
@@ -341,21 +341,15 @@
         </dependency-->
         <!-- Import the Common Annotations API (JSR-250), we use provided scope
         as the API is included in WildFly -->
-        <dependency>
+        <!--dependency>
             <groupId>org.jboss.spec.javax.annotation</groupId>
             <artifactId>jboss-annotations-api_1.2_spec</artifactId>
             <scope>provided</scope>
-        </dependency>
+        </dependency-->
         <!-- Import the Servlet API, we use provided scope as the API is included in WildFly -->
         <dependency>
             <groupId>org.jboss.spec.javax.servlet</groupId>
             <artifactId>jboss-servlet-api_3.1_spec</artifactId>
-            <scope>provided</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>org.hibernate.javax.persistence</groupId>
-            <artifactId>hibernate-jpa-2.1-api</artifactId>
             <scope>provided</scope>
         </dependency>
     </dependencies>
